--- a/vision.ipynb
+++ b/vision.ipynb
@@ -167,8 +167,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "24e3daad-09be-4861-8201-514a6de3ae21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "import io\n",
+    "\n",
+    "def load_image(filename):\n",
+    "    \n",
+    "    MAX_PIXELS = 1024 * 1024  # 1 million pixels\n",
+    "    \n",
+    "    # Open and resize image if needed\n",
+    "    with Image.open(filename) as img:\n",
+    "        while img.width * img.height > MAX_PIXELS:\n",
+    "            img = img.resize((img.width // 2, img.height // 2), Image.ANTIALIAS)\n",
+    "    \n",
+    "        # Save to in-memory buffer\n",
+    "        buffer = io.BytesIO()\n",
+    "        img.save(buffer, format=\"PNG\")\n",
+    "        image_bytes = buffer.getvalue()  # This is ready to send to boto3\n",
+    "    return image_bytes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71ef23a0-eed5-4450-9c78-4fd74abb6e07",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -176,9 +202,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cwu",
+   "display_name": "broai",
    "language": "python",
-   "name": "broai-cwu"
+   "name": "broai"
   },
   "language_info": {
    "codemirror_mode": {
